# fever-dream-inc

./: .gitignore  Cargo.toml  save_data.json
assets/models/: abyssopod.glb  gaping_dubine.glb  gazing_hoku.glb  hellmite.glb  lorgner.glb  pelte_lacerte.glb  struthios.glb  wooly_chionoescent.glb
assets/shaders/: tar_shader.wgsl
src/: audio.rs  automatons.rs  camera.rs  config.rs  data.rs  environment.rs  interface.rs  main.rs  portal.rs  rand.rs
src/automatons/: abyssopod.rs  gaping_dubine.rs  gazing_hoku.rs  hellmite.rs  lorgner.rs  mod.rs  pelte_lacerte.rs  struthios.rs  wooly_chionoescent.rs
src/materials/: mod.rs  tar_material.rs
