[package]
name = "fever-dream-inc"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app",
    "2d_api",
    "2d_bevy_render",
    "3d_api",
    "3d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "scene",
    "picking",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "wayland",
    "sysinfo_plugin",
    "bevy_gltf",
    "experimental_bevy_ui_widgets",
    "png",
    "mp3",
    "wav",
] }
bevy_kira_audio = { version = "0.25.0", features = ["mp3", "wav"] }
getrandom = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }


[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
js-sys = "0.3.85"
web-sys = { version = "0.3.85", features = ["Window", "Storage"] }
